<resources>
    <string name="app_name">HelloWorld</string>

    <!--Login-->
    <string name="loginForm">Welcome back!</string>
    <string name="loginButton">Login</string>
    <string name="forgotPassword"><u>Forgot your password?</u></string>
    <string name="goToRegister"><u>Not yet registered?</u></string>

    <!--Register-->
    <string name="registerForm">Create an account</string>
    <string name="goToLogin"><u>Already have an account?</u></string>
    <string name="registerButton">Register</string>

    <!--Forms-->
    <string name="unameLabel">Username</string>
    <string name="passLabel">Password</string>
    <string name="login_remember">Remember me.</string>
    <string name="lastnameLabel">Lastname</string>
    <string name="firstnameLabel">Firstname</string>
    <string name="middlenameLabel">Middlename</string>
    <string name="radioButton2">Female</string>
    <string name="radioButton3">Other</string>
    <string name="radioButton1">Male</string>
    <string name="emailLabel">Email</string>

    <!--Home-->
    <string name="storeTitle">Store</string>
    <string name="shopWelcome">Welcome to our shop!</string>
    <string name="itemSize1">S</string>
    <string name="itemSize2">M</string>
    <string name="itemSize3">L</string>
    <string name="itemSize4">XL</string>
    <string name="sizePriceGuide">S = ₱100.00\nM = ₱150.00\nL = ₱200.</string>
    <string name="checkoutButton">Checkout</string>

    <!--Item Prices-->
    <string name="small">₱100.00</string>
    <string name="medium">₱150.00</string>
    <string name="large">₱200.00</string>

    <!--Cart-->
    <string name="cartDescription">When you\'re ready to checkout, click the button below.</string>
    <string name="cartIntro">Manage your purchases here.</string>
    <string name="cartShirtDescription">Cart Item: Shirt</string>
    <string name="cartDressDescription">Cart Item: Dress</string>
    <string name="cartJacketDescription">Cart Item: Jacket</string>
</resources>
